--- a/index.html
+++ b/index.html
@@ -4,9 +4,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>World Cup</title>
+    <link rel="stylesheet" href="styles/style.css">
+    <script src="https://kit.fontawesome.com/01f82063e0.js" crossorigin="anonymous"></script>
 </head>
 <body>
-    
+    <main>
+        <!-- banner section -->
+        <section class="top-banner">
+            <div class="banner-text">
+                <h1>The Greatest Show On The Earth</h1>
+                <p>Football is like life. It requires perseverance, self-denial, hard work, sacrifice, dedication, and respect
+                    for
+                    authority.</p>
+                <a href="">Watch Live <i class="fa-solid fa-angle-right"></i></a>
+            </div>
+            <div class="banner-image">
+                <img src="assets/Banner Image.png" alt="">
+            </div>
+        </section>
+
+        <!-- navigation and content section -->
+        <section></section>
+    </main>
 </body>
 </html>
