--- a/index.html
+++ b/index.html
@@ -25,7 +25,132 @@
         </section>
 
         <!-- navigation and content section -->
-        <section></section>
+        <section class="flexible-container">
+            <nav>
+                <a href="">Upcoming Match</a>
+                <a href="">All Group</a>
+                <a class="current-page" href="">Blog</a>
+            </nav>
+            <div class="blogs">
+                <div class="blog">
+                    <img src="assets/Blog Image.png" alt="">
+                    <div class="blog-text">
+                        <a href="">Transfer</a>
+                        <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="blog-bottom">
+                            <img src="assets/Time Icon.png" alt="">
+                            <p>10h</p>
+                            <img src="assets/Chat Icon.png" alt="">
+                            <p>23</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog">
+                    <img src="assets/Blog Image.png" alt="">
+                    <div class="blog-text">
+                        <a href="">Transfer</a>
+                        <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="blog-bottom">
+                            <img src="assets/Time Icon.png" alt="">
+                            <p>10h</p>
+                            <img src="assets/Chat Icon.png" alt="">
+                            <p>23</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog">
+                    <img src="assets/Blog Image.png" alt="">
+                    <div class="blog-text">
+                        <a href="">Transfer</a>
+                        <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="blog-bottom">
+                            <img src="assets/Time Icon.png" alt="">
+                            <p>10h</p>
+                            <img src="assets/Chat Icon.png" alt="">
+                            <p>23</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog">
+                    <img src="assets/Blog Image.png" alt="">
+                    <div class="blog-text">
+                        <a href="">Transfer</a>
+                        <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="blog-bottom">
+                            <img src="assets/Time Icon.png" alt="">
+                            <p>10h</p>
+                            <img src="assets/Chat Icon.png" alt="">
+                            <p>23</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog">
+                    <img src="assets/Blog Image.png" alt="">
+                    <div class="blog-text">
+                        <a href="">Transfer</a>
+                        <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="blog-bottom">
+                            <img src="assets/Time Icon.png" alt="">
+                            <p>10h</p>
+                            <img src="assets/Chat Icon.png" alt="">
+                            <p>23</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog">
+                    <img src="assets/Blog Image.png" alt="">
+                    <div class="blog-text">
+                        <a href="">Transfer</a>
+                        <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="blog-bottom">
+                            <img src="assets/Time Icon.png" alt="">
+                            <p>10h</p>
+                            <img src="assets/Chat Icon.png" alt="">
+                            <p>23</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog">
+                    <img src="assets/Blog Image.png" alt="">
+                    <div class="blog-text">
+                        <a href="">Transfer</a>
+                        <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="blog-bottom">
+                            <img src="assets/Time Icon.png" alt="">
+                            <p>10h</p>
+                            <img src="assets/Chat Icon.png" alt="">
+                            <p>23</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog">
+                    <img src="assets/Blog Image.png" alt="">
+                    <div class="blog-text">
+                        <a href="">Transfer</a>
+                        <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="blog-bottom">
+                            <img src="assets/Time Icon.png" alt="">
+                            <p>10h</p>
+                            <img src="assets/Chat Icon.png" alt="">
+                            <p>23</p>
+                        </div>
+                    </div>
+                </div>
+                <div class="blog">
+                    <img src="assets/Blog Image.png" alt="">
+                    <div class="blog-text">
+                        <a href="">Transfer</a>
+                        <h3>Transfer Live: Chlesea in talks over Kimpenbe transfer</h3>
+                        <div class="blog-bottom">
+                            <img src="assets/Time Icon.png" alt="">
+                            <p>10h</p>
+                            <img src="assets/Chat Icon.png" alt="">
+                            <p>23</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </section>
     </main>
 </body>
 </html>
