--- a/index.html
+++ b/index.html
@@ -152,5 +152,23 @@
             </div>
         </section>
     </main>
+    <!-- footer section design -->
+    <footer>
+        <h1>Goal</h1>
+        <hr class="hr">
+        <div class="links">
+            <a href="">Contact Us</a>
+            <a href="">Terms of Service</a>
+            <a href="">Privacy Policy</a>
+            <a href="">Privacy Settings</a>
+            <a href="">Goal App</a>
+            <a href="">Goal Live</a>
+        </div>
+        <div class="social-media">
+            <a href=""><i class="fa-brands fa-facebook-square"></i></a>
+            <a href=""><i class="fa-brands fa-twitter-square"></i></a>
+            <a href=""><i class="fa-brands fa-youtube"></i></a>
+        </div>
+    </footer>
 </body>
 </html>
