--- a/index.html
+++ b/index.html
@@ -151,6 +151,7 @@
                 </div>
             </div>
         </section>
+        <span class="button"><a class="button" href="">view all</a></span>
     </main>
     <!-- footer section design -->
     <footer>
