navigation through pages added

--- a/match.html
+++ b/match.html
@@ -32,71 +32,71 @@
             <nav>
                 <a class="current-page" href="">Upcoming Match</a>
                 <a href="">All Group</a>
-                <a href="">Blog</a>
+                <a href="index.html">Blog</a>
             </nav>
-            <div class="blogs">
-                <div class="blog">
+            <div class="matches">
+                <div class="match-card">
                     <div class="match">
                         <img src="assets/germany Flag.png" alt="">
                         <h4>VS</h4>
                         <img src="assets/Flag.png" alt="">
                     </div>
-                    <div class="blog-text">
+                    <div class="match-text">
                         <h3>Germany VS France</h3>
                         <p>April 01, 2023, 1.00 AM</p>
                     </div>
                 </div>
-                <div class="blog">
+                <div class="match-card">
                     <div class="match">
                         <img src="assets/germany Flag.png" alt="">
                         <h4>VS</h4>
                         <img src="assets/Flag.png" alt="">
                     </div>
-                    <div class="blog-text">
+                    <div class="match-text">
                         <h3>Germany VS France</h3>
                         <p>April 01, 2023, 1.00 AM</p>
                     </div>
                 </div>
-                <div class="blog">
+                <div class="match-card">
                     <div class="match">
                         <img src="assets/germany Flag.png" alt="">
                         <h4>VS</h4>
                         <img src="assets/Flag.png" alt="">
                     </div>
-                    <div class="blog-text">
+                    <div class="match-text">
                         <h3>Germany VS France</h3>
                         <p>April 01, 2023, 1.00 AM</p>
                     </div>
                 </div>
-                <div class="blog">
+                <div class="match-card">
                     <div class="match">
                         <img src="assets/germany Flag.png" alt="">
                         <h4>VS</h4>
                         <img src="assets/Flag.png" alt="">
                     </div>
-                    <div class="blog-text">
+                    <div class="match-text">
                         <h3>Germany VS France</h3>
                         <p>April 01, 2023, 1.00 AM</p>
                     </div>
                 </div>
-                <div class="blog">
+                <div class="match-card">
                     <div class="match">
                         <img src="assets/germany Flag.png" alt="">
                         <h4>VS</h4>
                         <img src="assets/Flag.png" alt="">
                     </div>
-                    <div class="blog-text">
+                    <div class="match-text">
                         <h3>Germany VS France</h3>
                         <p>April 01, 2023, 1.00 AM</p>
                     </div>
                 </div>
-                <div class="blog">
+                <div class="match-card">
                     <div class="match">
                         <img src="assets/germany Flag.png" alt="">
                         <h4>VS</h4>
                         <img src="assets/Flag.png" alt="">
                     </div>
-                    <div class="blog-text">
+                    <div class="match-text">
                         <h3>Germany VS France</h3>
                         <p>April 01, 2023, 1.00 AM</p>
                     </div>
