--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <!-- navigation and content section -->
         <section class="flexible-container">
             <nav>
-                <a href="">Upcoming Match</a>
+                <a href="match.html">Upcoming Match</a>
                 <a href="">All Group</a>
                 <a class="current-page" href="">Blog</a>
             </nav>
