final version done

--- a/match.html
+++ b/match.html
@@ -22,8 +22,8 @@
                     authority.</p>
                 <a href="">Watch Live <i class="fa-solid fa-angle-right"></i></a>
             </div>
-            <div class="banner-image">
-                <img src="assets/Banner Image.png" alt="">
+            <div class="banner-image stage">
+                <img class="animate" src="assets/Banner Image.png" alt="">
             </div>
         </section>
 
@@ -118,9 +118,10 @@
             <a href="">Goal Live</a>
         </div>
         <div class="social-media">
-            <a href=""><i class="fa-brands fa-facebook-square"></i></a>
-            <a href=""><i class="fa-brands fa-twitter-square"></i></a>
-            <a href=""><i class="fa-brands fa-youtube"></i></a>
+            <a target="_blank" href="https://www.facebook.com/fifaworldcup"><i class="fa-brands fa-facebook-square"></i></a>
+            <a target="_blank" href="https://twitter.com/FIFAcom"><i class="fa-brands fa-twitter-square"></i></a>
+            <a target="_blank" href="https://www.youtube.com/fifa"><i class="fa-brands fa-youtube"></i></a>
+            <a target="_blank" href="https://www.instagram.com/worldcup.2022.qatar/?hl=en"><i class="fa-brands fa-instagram-square"></i></a>
         </div>
     </footer>
 </body>
