--- a/index.html
+++ b/index.html
@@ -14,13 +14,11 @@
         <section class="top-banner">
             <div class="banner-text">
                 <h1>The Greatest Show On The Earth</h1>
-                <p>Football is like life. It requires perseverance, self-denial, hard work, sacrifice, dedication, and respect
-                    for
-                    authority.</p>
-                <a href="">Watch Live <i class="fa-solid fa-angle-right"></i></a>
+                <p>Football is like life. It requires perseverance, self-denial, hard work, sacrifice, dedication, and respect for authority.</p>
+                <a class="banner-button" href="">Watch Live <i class="fa-solid fa-angle-right"></i></a>
             </div>
-            <div class="banner-image">
-                <img src="assets/Banner Image.png" alt="">
+            <div class="banner-image stage">
+                <img class="animate" src="assets/Banner Image.png" alt="">
             </div>
         </section>
 
@@ -166,9 +164,11 @@
             <a href="">Goal Live</a>
         </div>
         <div class="social-media">
-            <a href=""><i class="fa-brands fa-facebook-square"></i></a>
-            <a href=""><i class="fa-brands fa-twitter-square"></i></a>
-            <a href=""><i class="fa-brands fa-youtube"></i></a>
+            <a target="_blank" href="https://www.facebook.com/fifaworldcup"><i class="fa-brands fa-facebook-square"></i></a>
+            <a target="_blank" href="https://twitter.com/FIFAcom"><i class="fa-brands fa-twitter-square"></i></a>
+            <a target="_blank" href="https://www.youtube.com/fifa"><i class="fa-brands fa-youtube"></i></a>
+            <a target="_blank" href="https://www.instagram.com/worldcup.2022.qatar/?hl=en"><i
+                    class="fa-brands fa-instagram-square"></i></a>
         </div>
     </footer>
 </body>
