--- a/match.html
+++ b/match.html
@@ -23,7 +23,7 @@
                 <a href="">Watch Live <i class="fa-solid fa-angle-right"></i></a>
             </div>
             <div class="banner-image stage">
-                <img class="animate" src="assets/Banner Image.png" alt="">
+                <img class="animate" src="assets/Banner Image1.png" alt="">
             </div>
         </section>
 
